# COGENT_ENGINE

./: CMakeLists.txt  LICENSE  README.md  RenderGraph.hpp  cogent_log.txt  imgui.ini  main.cpp
Core/: Camera.hpp  Logger.hpp  Types.hpp  VulkanUtils.cpp  VulkanUtils.hpp
Core/Diagnostics/: GpuProfiler.cpp  GpuProfiler.hpp  Profiler.hpp
Core/Graphics/: GraphicsDevice.cpp  GraphicsDevice.hpp  Swapchain.cpp  Swapchain.hpp
Core/Math/: Frustum.hpp
Core/Memory/: Allocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp
Core/Threading/: JobSystem.hpp
Core/Time/: FramePacer.hpp
Editor/: EditorUI.cpp  EditorUI.hpp  console_impl.temp
Engine/: CogentEngine.cpp  CogentEngine.hpp
Geometry/: Meshlet.hpp  PrimitiveMesh.cpp  PrimitiveMesh.hpp
Optimization/: OptimizerAI.hpp  SceneAnalyzer.hpp
RayTracing/: RayTracer.cpp  RayTracer.hpp
Renderer/: DeferredLightingPass.cpp  DeferredLightingPass.hpp  DepthPrePass.hpp  GBuffer.cpp  GBuffer.hpp  InstanceBuffer.cpp  InstanceBuffer.hpp  LightingPass.cpp  LightingPass.hpp  RenderPipeline.cpp  RenderPipeline.hpp  ScreenSpaceShadows.cpp  ScreenSpaceShadows.hpp  ShadowPass.cpp  ShadowPass.hpp  TAAResolvePass.hpp
Renderer/ANSR/: ANSRPass.cpp  ANSRPass.hpp
Renderer/Graph/: RenderGraph.cpp  RenderGraph.hpp
Renderer/PostProcess/: AutoExposurePass.cpp  AutoExposurePass.hpp
Renderer/Visibility/: VisibilitySystem.cpp  VisibilitySystem.hpp
Resources/: Model.cpp  Model.hpp  ResourceManager.hpp  Texture.cpp  Texture.hpp
Resources/Streaming/: Streamer.cpp  Streamer.hpp
Scene/: GameObject.hpp
Shaders/: ANSR.comp  ANSR.comp.spv  AutoExposure.comp.spv  gbuffer.vert  gbuffer.vert.spv  lighting.frag  lighting.frag.spv  lighting.vert  raytrace.comp.spv  sss.comp
